@@ -44,6 +44,7 @@ t/data/xhtml-results/quote-fort-sample-7-with-italics.xhtml
 t/data/xhtml-results/quote-fort-sample-8-with-em-and-strong.xhtml
 t/data/xhtml-results/raw-fort-empty-info-1.xhtml
 t/data/xhtml-results/screenplay-fort-sample-1.xhtml
+t/data/xhtml-results/screenplay-fort-sample-2-with-italics.xhtml
 t/data/xml/irc-conversation-1.xml
 t/data/xml/irc-conversation-2-with-slash-me.xml
 t/data/xml/irc-conversation-3-with-join-unjoin.xml
@@ -64,6 +65,7 @@ t/data/xml/raw-fort-empty-info-1.xml
 t/data/xml/raw-fort-with-info-1.xml
 t/data/xml/screenplay-fort-sample-1.xml
 t/data/xml/screenplay-fort-sample-2-long-line.xml
+t/data/xml/screenplay-fort-sample-2-with-italics.xml
 t/data/xml/screenplay-fort-sample-3-with-inlinedesc.xml
 TODO
 t/pod-coverage.t
