@@ -1,0 +1,60 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US">
+<head>
+<title>Fortunes</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+</head>
+<body>
+<div class="fortune">
+<h3 id="david-and-goliath-1">David and Goliath - 1</h3>
+<div class="screenplay">
+<div class="description">
+<p>[
+David and 
+<a href="http://en.wikipedia.org/wiki/Goliath">Goliath</a> 
+are standing by each other.
+]</p>
+</div>
+<div class="saying">
+<p><strong class="sayer">David:</strong> 
+I will kill you, as written in <em class="italics">Treasure Island</em>.<br/>
+I will kill you.<br/>
+You will not <strong class="bold">survive</strong>.<br/>
+I will kill you.<br/>
+I will kill you.<br/>
+Ask Jive.
+</p>
+</div>
+<div class="saying">
+<p><strong class="sayer">Goliath:</strong> 
+no way, you little idiot!
+</p>
+</div>
+<div class="saying">
+<p><strong class="sayer">David:</strong> 
+yes way!
+</p>
+</div>
+</div>
+<table class="info">
+<tbody>
+<tr class="author">
+<td class="field">
+<b>Author</b>
+</td>
+<td class="value">Shlomi Fish</td>
+</tr>
+<tr class="work">
+<td class="field">
+<b>Work</b>
+</td>
+<td class="value">
+<a href="http://www.shlomifish.org/">David and Goliath Skit</a>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</body>
+</html>
